[package]
name = "ttc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
prost = "0.14.3"
reqwest = {"version" = "0.13.2", "features" = ["json"]}
serde = {"version" = "1.0.228", "features" = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "8.5.0"

[build-dependencies]
prost-build = "0.14.3"
