[package]
name = "ttc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ttc-gfts"
path = "./src/gfts.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
prost = "0.14.3"
reqwest = {"version" = "0.13.2", "features" = ["json"]}
serde = {"version" = "1.0.228", "features" = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "8.5.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[build-dependencies]
prost-build = "0.14.3"
